--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,9 @@
                     <button onclick="location.href='/register'" type="button">Register</button>
                 </form>
             </div>
+            <div class="container" align="left">
+                <a href="/return-files?file=public_info.txt" target="blank"><button class='btn btn-default'>Download!</button></a>
+           </div>
         </div>
     </body>
 </html>
